--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -10,7 +10,7 @@ NODE_ENV = 'production'
 VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
 ## 官网地址
-VUE_APP_WEB_SITE = 'http://devconsole.holoalpha.com/web/'
+VUE_APP_WEB_SITE = 'http://devweb.holoalpha.com/web/'
 
 VUE_APP_PRESCRIPTION_SITE = 'https://testdurhome.imedcloud.jk.com/'
 VUE_APP_ORGANIZATION_SITE='https://devapi.holoalpha.com/mechanism/#/'
