--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -7,7 +7,7 @@
 NODE_ENV = 'production'
 
 ## 官网地址
-VUE_APP_WEB_SITE = 'http://web.imedcloud.jk.com/'
+VUE_APP_WEB_SITE = 'https://web.imedcloud.jk.com/'
 
 VUE_APP_PRESCRIPTION_SITE = 'https://durhome.imedcloud.jk.com/'
 VUE_APP_ORGANIZATION_SITE='https://api.holoalpha.com/mechanism/#/'
