--- a/packages/repo-website/.env
+++ b/packages/repo-website/.env
@@ -8,3 +8,7 @@ NODE_ENV = 'development'
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
+## 医生登录入口路径
+VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.holoalpha.com/doctorpc/#/login'
+## 药师登录入口路径
+VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://testdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
