--- a/packages/repo-website/.env.dev
+++ b/packages/repo-website/.env.dev
@@ -5,3 +5,8 @@
 
 ## 编译模式
 NODE_ENV = 'production'
+
+## 医生登录入口路径
+VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.holoalpha.com/doctorpc/#/login'
+## 药师登录入口路径
+VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://testdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
