--- a/packages/repo-website/.env.pre
+++ b/packages/repo-website/.env.pre
@@ -5,3 +5,9 @@
 
 ## 编译模式
 NODE_ENV = 'production'
+
+
+## 医生登录入口路径
+VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://predoctor.holoalpha.com/doctorpc/#/login'
+## 药师登录入口路径
+VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://predurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
