--- a/packages/repo-operation/package.json
+++ b/packages/repo-operation/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "cross-env": "^7.0.2",
+    "dragon-echarts-wordcloud": "^1.0.1",
     "echarts": "^4.8.0",
     "element-ui": "^2.13.1",
     "jsonschema": "^1.2.6",
@@ -31,6 +32,7 @@
     "vue": "^2.6.11",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.1.6",
+    "vue-seamless-scroll": "^1.1.21",
     "vuex": "^3.3.0"
   },
   "devDependencies": {
