--- a/packages/repo-website/.env.test
+++ b/packages/repo-website/.env.test
@@ -6,6 +6,9 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/web/'
+
 ## 控制台路径
 VUE_APP_CONSOLE_SITE = 'https://testconsole.holoalpha.com/web/'
 ## 医生登录入口路径
