--- a/packages/repo-auth/package.json
+++ b/packages/repo-auth/package.json
@@ -34,7 +34,8 @@
     "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.1.6",
     "vue-seamless-scroll": "^1.1.21",
-    "vuex": "^3.3.0"
+    "vuex": "^3.3.0",
+    "vue-json-editor": "^1.2.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
