--- a/packages/repo-auth/.env
+++ b/packages/repo-auth/.env
@@ -15,4 +15,6 @@ VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
-VUE_APP_SERVER_API='http://zyy-gateway:9999/'
+
+## Auth API
+VUE_APP_AUTH_API='http://zyy-gateway:9999/'
