--- a/packages/repo-auth/.env.dev
+++ b/packages/repo-auth/.env.dev
@@ -12,11 +12,5 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 ## Server API
 VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
 
-## 处方运营端系统地址
-VUE_APP_OPERATION_SITE = 'https://devduroc.imedcloud.jk.com/'
-
-## 互医运营端系统地址
-VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
-
-## 互医机构端端系统地址
-VUE_APP_NETHOSPITAL_ORG = 'https://devapi.holoalpha.com/mechanism/#/'
+## Auth API
+VUE_APP_AUTH_API='http://114.115.150.24:9999'
