--- a/packages/repo-auth/.env.pre
+++ b/packages/repo-auth/.env.pre
@@ -9,11 +9,5 @@ NODE_ENV = 'production'
 ## Server API
 VUE_APP_BASE_API = 'https://preoperate.holoalpha.com/'
 
-## 处方运营端系统地址
-VUE_APP_OPERATION_SITE = 'https://preduroc.imedcloud.jk.com/'
-
-## 互医运营端系统地址
-VUE_APP_NETHOSPITAL = 'https://preapi.holoalpha.com/backend/#'
-
-## 互医机构端端系统地址
-VUE_APP_NETHOSPITAL_ORG = 'https://preapi.holoalpha.com/mechanism/#/'
+## Auth API
+VUE_APP_AUTH_API='http://114.115.150.24:9999'
