--- a/packages/repo-auth/.env.test
+++ b/packages/repo-auth/.env.test
@@ -13,4 +13,4 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 VUE_APP_BASE_API = 'https://testoperate.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API='http://114.115.150.24:9999'
+VUE_APP_AUTH_API='http://114.115.150.24:9999/'
