--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -23,4 +23,4 @@ VUE_APP_ORGANIZATION_SITE='https://devapi.holoalpha.com/mechanism/#/'
 VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API = 'http://114.115.150.24:9999/'
+VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
