--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -20,4 +20,4 @@ VUE_APP_ORGANIZATION_SITE='https://preapi.holoalpha.com/mechanism/#/'
 VUE_APP_BASE_API = 'https://preconsole.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API = 'http://114.115.150.24:9999'
+VUE_APP_AUTH_API = 'https://preauth.imedcloud.jk.com/'
