--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -20,4 +20,4 @@ VUE_APP_ORGANIZATION_SITE='https://api.holoalpha.com/mechanism/#/'
 VUE_APP_BASE_API = 'https://console.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API = 'http://114.115.150.24:9999'
+VUE_APP_AUTH_API = 'https://auth.imedcloud.jk.com/'
