--- a/packages/repo-auth/.env
+++ b/packages/repo-auth/.env
@@ -17,4 +17,4 @@ VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
 VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API='http://114.115.150.24:9999/'
+VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
