--- a/packages/repo-auth/.env.pre
+++ b/packages/repo-auth/.env.pre
@@ -10,4 +10,4 @@ NODE_ENV = 'production'
 VUE_APP_BASE_API = 'https://preoperate.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API='http://114.115.150.24:9999/'
+VUE_APP_AUTH_API = 'https://preauth.imedcloud.jk.com/'
