--- a/packages/repo-auth/.env.prod
+++ b/packages/repo-auth/.env.prod
@@ -10,4 +10,4 @@ NODE_ENV = 'production'
 VUE_APP_BASE_API = 'https://operate.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API='http://114.115.150.24:9999/'
+VUE_APP_AUTH_API = 'https://auth.imedcloud.jk.com/'
