--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -15,7 +15,7 @@ VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
 VUE_APP_MAP_KEY = 'S2WBZ-VHEK5-UCAIE-Q4TPB-LO7P3-DCB54'
 
 ## 微信公众号 appid
-VUE_APP_APPID = 'wx78d7ae35932558e6'
+VUE_APP_APPID = 'wxed627bdde3060ade'
 
 ## 外链配置
 VUE_APP_IFRAME_BASE_URL='https://devweb.holoalpha.com/'
