--- a/packages/repo-website/package.json
+++ b/packages/repo-website/package.json
@@ -25,7 +25,9 @@
     "scp2": "^0.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.3.0"
+    "vuex": "^3.3.0",
+    "@jk998/library": "^0.1.13",
+    "@jk998/identity": "^0.1.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
