--- a/packages/repo-website/package.json
+++ b/packages/repo-website/package.json
@@ -27,7 +27,8 @@
     "vue-router": "^3.1.6",
     "vuex": "^3.3.0",
     "@jk998/library": "^0.1.13",
-    "@jk998/identity": "^0.1.8"
+    "@jk998/identity": "^0.1.8",
+    "@jk998/peace-element-ui": "^0.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
