--- a/packages/repo-operation/package.json
+++ b/packages/repo-operation/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@jiaminghi/data-view": "^2.9.4",
+    "@jk998/library": "^0.1.14",
+    "@jk998/peace-element-ui": "^0.1.3",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
