--- a/packages/repo-pharmacist/.env.dev
+++ b/packages/repo-pharmacist/.env.dev
@@ -5,3 +5,11 @@
 
 ## 编译模式
 NODE_ENV = 'production'
+
+# API CONFIG
+## API BASE
+VUE_APP_API_BASE = ''
+
+# SITE CONFIG
+## SITE BASE 
+VUE_APP_SITE_BASE = 'https://testdurhome.imedcloud.jk.com/'
