--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -13,6 +13,8 @@
     "start": "npm run serve"
   },
   "dependencies": {
+    "@jk998/library": "^0.1.16",
+    "@jk998/peace-element-ui": "^0.1.1",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.19.0",
     "core-js": "^3.6.4",
