--- a/packages/repo-operation/package.json
+++ b/packages/repo-operation/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm run serve",
+    "dev": "vue-cli-service serve",
+    "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build:dev": "vue-cli-service build --mode dev",
     "deploy:dev": "vue-cli-service build --mode dev && cross-env NODE_ENV=dev node ./deploy",
