--- a/packages/repo-pharmacist/.env.prod
+++ b/packages/repo-pharmacist/.env.prod
@@ -7,8 +7,10 @@
 NODE_ENV = 'production'
 
 # API CONFIG
+## API MOCK BASE
+VUE_APP_MOCK_API = 'https://yapi.imedcloud.jk.com/mock/25/'
 ## API BASE
-VUE_APP_API_BASE = ''
+VUE_APP_BASE_API = 'https://service.imedcloud.jk.com/'
 
 # SITE CONFIG
 ## SITE BASE 
