--- a/packages/repo-website/.env.pre
+++ b/packages/repo-website/.env.pre
@@ -11,7 +11,7 @@ VUE_APP_CONSOLE_SITE = 'https://preconsole.imedcloud.jk.com/'
 ## 医生登录入口路径
 VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://predoctor.holoalpha.com/doctorpc/#/login'
 ## 药师登录入口路径
-VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://predurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
+VUE_APP_PHARMACIST_WORKBENCH_SITE = 'https://prepharmacistweb.imedcloud.jk.com/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://preweb.holoalpha.com/'
