--- a/packages/repo-website/.env.dev
+++ b/packages/repo-website/.env.dev
@@ -12,7 +12,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 ## 控制台路径
 VUE_APP_CONSOLE_SITE = 'https://devconsole.holoalpha.com/web/'
 ## 医生登录入口路径
-VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.holoalpha.com/doctorpc/#/login'
+VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.imedcloud.jk.com/doctorpc/#/login'
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'https://devpharmacistweb.imedcloud.jk.com/'
 
