--- a/packages/repo-website/.env.pre
+++ b/packages/repo-website/.env.pre
@@ -9,7 +9,7 @@ NODE_ENV = 'production'
 ## 控制台路径
 VUE_APP_CONSOLE_SITE = 'https://preconsole.imedcloud.jk.com/'
 ## 医生登录入口路径
-VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://predoctor.holoalpha.com/doctorpc/#/login'
+VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://predoctor.imedcloud.jk.com/doctorpc/#/login'
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'https://prepharmacistweb.imedcloud.jk.com/'
 
