--- a/packages/repo-website/.env.test
+++ b/packages/repo-website/.env.test
@@ -12,7 +12,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 ## 控制台路径
 VUE_APP_CONSOLE_SITE = 'https://testconsole.holoalpha.com/web/'
 ## 医生登录入口路径
-VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://testdoctor.holoalpha.com/doctorpc/#/login'
+VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://testdoctor.imedcloud.jk.com/doctorpc/#/login'
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'https://testpharmacistweb.imedcloud.jk.com/'
 
