--- a/packages/repo-organization/package.json
+++ b/packages/repo-organization/package.json
@@ -3,7 +3,8 @@
   "version": "1.2.0",
   "private": true,
   "scripts": {
-    "start": "npm run serve",
+    "dev": "vue-cli-service serve",
+    "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build:dev": "vue-cli-service build --mode dev",
     "build:test": "vue-cli-service build --mode test",
@@ -13,6 +14,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jk998/identity": "^0.1.17",
+    "@jk998/library": "^0.1.17",
+    "@jk998/peace-element-ui": "^0.1.6",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
@@ -21,10 +25,7 @@
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.3.0",
-    "@jk998/library": "^0.1.17",
-    "@jk998/identity": "^0.1.17",
-    "@jk998/peace-element-ui": "^0.1.5"
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
