--- a/packages/repo-operation/package.json
+++ b/packages/repo-operation/package.json
@@ -20,8 +20,9 @@
   },
   "dependencies": {
     "@jiaminghi/data-view": "^2.9.4",
+    "@jk998/identity": "^0.1.17",
     "@jk998/library": "^0.1.17",
-    "@jk998/peace-element-ui": "^0.1.5",
+    "@jk998/peace-element-ui": "^0.1.6",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
