--- a/packages/repo-pharmacist/.env.dev
+++ b/packages/repo-pharmacist/.env.dev
@@ -14,4 +14,4 @@ VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
 
 # SITE CONFIG
 ## SITE BASE 
-VUE_APP_SITE_BASE = 'https://testdurhome.imedcloud.jk.com/'
+VUE_APP_SITE_BASE = 'https://devdurhome.imedcloud.jk.com/'
