--- a/packages/repo-pharmacist/package.json
+++ b/packages/repo-pharmacist/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jk998/vue-cli-template",
-  "version": "1.5.0",
+  "name": "zycloud_pharmacist",
+  "version": "1.6.0",
   "private": true,
   "scripts": {
     "dev": "npm run serve",
