--- a/packages/repo-patient/.env.dev
+++ b/packages/repo-patient/.env.dev
@@ -10,7 +10,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/patient/'
 VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
 
 ## IM KEY
-VUE_APP_IM_KEY = '00bac322a65420671e1c236b284ae5a0'
+## VUE_APP_IM_KEY = '00bac322a65420671e1c236b284ae5a0'
 
 
 ## 外链配置
