--- a/packages/repo-operation/package.json
+++ b/packages/repo-operation/package.json
@@ -18,7 +18,7 @@
     "@jiaminghi/data-view": "^2.9.4",
     "@jk998/identity": "^0.2.5",
     "@jk998/library": "^0.1.30",
-    "@jk998/peace-element-ui": "^0.1.24",
+    "@jk998/peace-element-ui": "^0.1.26",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
@@ -31,6 +31,7 @@
     "scp2": "^0.5.0",
     "vue": "^2.6.11",
     "vue-echarts": "^5.0.0-beta.0",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.6",
     "vue-seamless-scroll": "^1.1.21",
     "vuex": "^3.3.0"
