--- a/packages/repo-organization/package.json
+++ b/packages/repo-organization/package.json
@@ -28,7 +28,9 @@
     "vue": "^2.6.11",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.1.6",
-    "vuex": "^3.3.0"
+    "vuex": "^3.3.0",
+    "vue-clipboard2": "^0.3.1",
+    "vuedraggable": "^2.20.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
