--- a/packages/repo-organization/package.json
+++ b/packages/repo-organization/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zycloud_console",
-  "version": "1.8.0",
+  "version": "1.9.0",
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
@@ -26,11 +26,11 @@
     "jsonschema": "^1.2.6",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.1.6",
-    "vuex": "^3.3.0",
-    "vue-clipboard2": "^0.3.1",
-    "vuedraggable": "^2.20.0"
+    "vuedraggable": "^2.20.0",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
