--- a/packages/repo-operation/package.json
+++ b/packages/repo-operation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zycloud_operation",
-  "version": "1.8.0",
+  "version": "1.9.0",
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
@@ -32,6 +32,7 @@
     "vue": "^2.6.11",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-quill-editor": "^3.0.6",
+    "quill-image-extend-module": "^1.1.2",
     "vue-router": "^3.1.6",
     "vue-seamless-scroll": "^1.1.21",
     "vuex": "^3.3.0"
