--- a/packages/repo-operation/package.json
+++ b/packages/repo-operation/package.json
@@ -34,6 +34,7 @@
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.6",
     "vue-seamless-scroll": "^1.1.21",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.3.0"
   },
   "devDependencies": {
@@ -44,10 +45,11 @@
     "babel-plugin-transform-imports": "1.5.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize-module": "^3.0.0",
     "sass": "^1.26.3",
     "sass-loader": "^7.0.0",
     "vue-cli-plugin-quasar": "^2.0.0",
     "vue-template-compiler": "^2.6.11",
-    "vuedraggable": "^2.24.3"
   }
 }
