--- a/packages/repo-operation/package.json
+++ b/packages/repo-operation/package.json
@@ -50,6 +50,6 @@
     "sass": "^1.26.3",
     "sass-loader": "^7.0.0",
     "vue-cli-plugin-quasar": "^2.0.0",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.11"
   }
 }
