--- a/packages/repo-operation/.env.dev
+++ b/packages/repo-operation/.env.dev
@@ -24,6 +24,6 @@ VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 
 ## 站点地址 
 ## 处方运营端系统地址
-VUE_APP_SITE_OPERATION = 'https://devduroc.holoalpha.com/apis/'
+VUE_APP_SITE_OPERATION = 'https://devduroc.holoalpha.com/'
 ## 互医运营端系统地址
 VUE_APP_SITE_NETHOSPITAL = 'https://devzyy.holoalpha.com/backend'
