--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -33,3 +33,5 @@ VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 VUE_APP_SITE_OPERATION = 'https://devduroc.holoalpha.com/'
 ## 互医运营端系统地址
 VUE_APP_SITE_NETHOSPITAL = 'https://devzyy.holoalpha.com/backend'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://devdurservice.holoalpha.com/'
